changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

common/map.c:  Code fix by Kurt Fitzner so that unique maps will get
compressed if so needed.  Fixes problem of unique maps not being
able to get reloaded as they are saved with the compress suffix but
not in compressed form.  Code checked in by Mark Wedel, 3/26/2000

server/skills.c, server/spell_effect.c: Improve behaviour when identifying
items - the identify routine already updates the client if it is
in the players inventory, so only send update to client if the item is
on the map.  Also, do full item update, as many fields may change, and
that is what the identify function does.  Standard top of
file banner also added to skills.c file.  Fixes problem of
objects in inventory being displayed with two numbers in from
(ie, two two bows +1).
Bug and initial fix of item updates by Kurt Fitzner, 
implemented in a bit different way by Mark Wedel.  3/26/2000

Makefile.in, doc/Makefile.in: Modified so that making the docarchive
now works.  The make must be done from the top level for it to work, since
some values are passed, but the doc/Makefile.in was missing some declarations
and had some other fixes that needed to be done.  msw 3/22/2000

------------------------------------------------------------------------------
Changes for 0.95.5:

Makefile.in: comment out the EXTRA_FLAGS (which contains the -Wall
entry) - the presumption that everyone is going to use gcc to compile
crossfire is a poor one, and -Wall is only supported on gcc.  I would
rather have it compile on the maximum number of systems without it